connection mongo et model user

--- a/interface/src/app/pages/crimes/details/details.html
+++ b/interface/src/app/pages/crimes/details/details.html
@@ -1,1 +1,118 @@
-details du bayou
+<div class="widgets">
+
+    <div class="row">
+        <div class="col-md-6">
+            <div
+                    ba-panel
+                    ba-panel-title="Identification"
+                    ba-panel-class="with-scroll">
+                <div >
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Compnos</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Compnos</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputLastName" class="col-sm-6 control-label">Nature Code</label>
+                        <label for="inputLastName" class="col-sm-6 control-label">Nature Code</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">UCR Part</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">UCR Part</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputLastName" class="col-sm-6 control-label">Incident Type Description</label>
+                        <label for="inputLastName" class="col-sm-6 control-label">Incident Type Description</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Main Crimecode</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Main Crimecode</label>
+                    </div>
+                </div>
+            </div>
+            <div
+                    ba-panel
+                    ba-panel-title="Localisation"
+                    ba-panel-class="with-scroll">
+                <div >
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">X</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">X</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputLastName" class="col-sm-6 control-label">Y</label>
+                        <label for="inputLastName" class="col-sm-6 control-label">Y</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Street Name</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Street Name</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputLastName" class="col-sm-6 control-label">Cross Street Name (optional)</label>
+                        <label for="inputLastName" class="col-sm-6 control-label">Cross Street Name (optional)</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Reptorted District</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Reptorted District</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputLastName" class="col-sm-6 control-label">Reporting Area</label>
+                        <label for="inputLastName" class="col-sm-6 control-label">Reporting Area</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Localisation</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Localisation</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div
+                    ba-panel
+                    ba-panel-title="Time"
+                    ba-panel-class="with-scroll">
+                <div >
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Year</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Year</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputLastName" class="col-sm-6 control-label">Month</label>
+                        <label for="inputLastName" class="col-sm-6 control-label">Month</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Day Week</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Day Week</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputLastName" class="col-sm-6 control-label">Date from</label>
+                        <label for="inputLastName" class="col-sm-6 control-label">Date from</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Shift</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Shift</label>
+                    </div>
+                </div>
+            </div>
+            <div
+                    ba-panel
+                    ba-panel-title="Details"
+                    ba-panel-class="with-scroll">
+                <div >
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Shooting</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Shooting</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputLastName" class="col-sm-6 control-label">Domestic</label>
+                        <label for="inputLastName" class="col-sm-6 control-label">Domestic</label>
+                    </div>
+                    <div class="form-group row clearfix">
+                        <label for="inputFirstName" class="col-sm-6 control-label">Weapon Type</label>
+                        <label for="inputFirstName" class="col-sm-6 control-label">Weapon Type</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
